[package]
name = "cool-bitvector"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/playxe/cool-bitvector"
repository = "https://github.com/playxe/cool-bitvector"
documentation = "https://docs.rs/cool-bitvector"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]